--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -13,9 +13,8 @@ blocks:
             - sem-version java 1.8
             - checkout
             - ./gradlew build
-  - name: Test
-    task:
-      jobs:
-        - name: Unit Test
-          commands:
-            - gradlew test --parallel
+promotions:
+  - name: Dockerize
+    pipeline_file: pipeline_2.yml
+    auto_promote:
+      when: branch = 'master' AND result = 'passed'
