--- a/.semaphore/pipeline_2.yml
+++ b/.semaphore/pipeline_2.yml
@@ -10,7 +10,7 @@ blocks:
       jobs:
         - name: Build and deploy docker container
           commands:
-            - gradle build &&
+            - gradle build
             - echo "$DOCKER_PASSWORD" | docker login  --username "$DOCKER_USERNAME" --password-stdin
             - 'docker pull "$DOCKER_USERNAME"/semaphore-demo-java-spring:latest || true'
             - 'docker build --cache-from "$DOCKER_USERNAME"/semaphore-demo-java-spring:latest \'
