--- a/.semaphore/pipeline_2.yml
+++ b/.semaphore/pipeline_2.yml
@@ -13,9 +13,8 @@ blocks:
             - gradle build
             - echo "$DOCKER_PASSWORD" | docker login  --username "$DOCKER_USERNAME" --password-stdin
             - 'docker pull "$DOCKER_USERNAME"/semaphore-demo-java-spring:latest || true'
-            - 'docker build --cache-from "$DOCKER_USERNAME"/semaphore-demo-java-spring:latest \'
-            - '      --build-arg ENVIRONMENT="${ENVIRONMENT}" \'
-            - '      -t "$DOCKER_USERNAME"/semaphore-demo-java-spring:latest .'
-            - 'docker push "$DOCKER_USERNAME"/semaphore-demo-java-spring:latest'
+            - 'docker build --cache-from "$DOCKER_USERNAME"/monda-calc:latest \'
+            - '      -t "$DOCKER_USERNAME"/monda-calc:latest .'
+            - 'docker push "$DOCKER_USERNAME"/monda-calc:latest'
       secrets:
         - name: dockerhub
